[gd_scene format=3 uid="uid://taurhsi8o8pr"]

[ext_resource type="Script" uid="uid://cm8kcmc65eg13" path="res://actors/dogdog_back/dogdog_back.gd" id="1_xlhl2"]
[ext_resource type="SpriteFrames" uid="uid://cctq7fsjddqut" path="res://assets/dogdog/dogdogBot/frames.tres" id="2_xlhl2"]
[ext_resource type="Script" uid="uid://0jiyn3ggg7i7" path="res://components/movement/move.gd" id="3_bhdm3"]
[ext_resource type="Script" uid="uid://dsqm8jb3i2qou" path="res://components/movement/move_input_path_finding.gd" id="4_3tx3r"]
[ext_resource type="Script" uid="uid://dwftx2inc4tqn" path="res://components/movement/stats.gd" id="5_bet7j"]
[ext_resource type="Script" uid="uid://bplsnnnm84yir" path="res://components/hurtbox_component.gd" id="6_4aml3"]
[ext_resource type="Script" uid="uid://dung32ibr41lw" path="res://components/hitbox_component.gd" id="7_yd8uv"]
[ext_resource type="Script" uid="uid://ctm4utg5yhsxf" path="res://components/drops_component.gd" id="8_ciqpl"]
[ext_resource type="Script" uid="uid://cnh2qn5i60evh" path="res://components/stats_component.gd" id="9_jk8y8"]
[ext_resource type="Script" uid="uid://c7f802exmchc0" path="res://components/damage_component.gd" id="10_o8d53"]
[ext_resource type="Script" uid="uid://betamc0v85hha" path="res://components/destroyed_component.gd" id="11_du2gm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_apiry"]
radius = 62.0
height = 255.0

[sub_resource type="Resource" id="Resource_3tx8k"]
script = ExtResource("5_bet7j")
speed = 800
metadata/_custom_type_script = "uid://dwftx2inc4tqn"

[sub_resource type="CircleShape2D" id="CircleShape2D_sfjoh"]
radius = 48.270073

[sub_resource type="CircleShape2D" id="CircleShape2D_c1246"]
radius = 36.013885

[node name="DogDog" type="CharacterBody2D" unique_id=1772619836]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_xlhl2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=395704127]
position = Vector2(0, -2)
scale = Vector2(0.6, 0.6)
sprite_frames = ExtResource("2_xlhl2")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1196546586]
shape = SubResource("CapsuleShape2D_apiry")

[node name="MoveComponent" type="Node" parent="." unique_id=885344095 node_paths=PackedStringArray("actor", "moveInputComponent")]
script = ExtResource("3_bhdm3")
actor = NodePath("..")
velocity = Vector2(0, 230)
moveInputComponent = NodePath("../MoveInputPathFindingComponent")

[node name="MoveInputPathFindingComponent" type="Node2D" parent="." unique_id=575347089 node_paths=PackedStringArray("moveComponent")]
script = ExtResource("4_3tx3r")
moveComponent = NodePath("../MoveComponent")
moveStats = SubResource("Resource_3tx8k")

[node name="HurtboxComponent" type="Area2D" parent="." unique_id=689255192]
collision_layer = 2
collision_mask = 0
script = ExtResource("6_4aml3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtboxComponent" unique_id=1794759814]
shape = SubResource("CapsuleShape2D_apiry")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" unique_id=51897163]
visible = false
shape = SubResource("CircleShape2D_sfjoh")

[node name="HitboxComponent" type="Area2D" parent="." unique_id=274012460]
collision_layer = 0
script = ExtResource("7_yd8uv")
metadata/_custom_type_script = "uid://dung32ibr41lw"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitboxComponent" unique_id=1168599850]
shape = SubResource("CapsuleShape2D_apiry")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" unique_id=1842452808]
visible = false
shape = SubResource("CircleShape2D_c1246")

[node name="DropsComponent" type="Node" parent="." unique_id=961523048]
script = ExtResource("8_ciqpl")

[node name="StatsComponent" type="Node" parent="." unique_id=1430424088]
script = ExtResource("9_jk8y8")
metadata/_custom_type_script = "uid://cnh2qn5i60evh"

[node name="DamageComponent" type="Node" parent="." unique_id=1011509843 node_paths=PackedStringArray("hurtboxComponent", "statsComponent") groups=["DamageComponents"]]
script = ExtResource("10_o8d53")
hurtboxComponent = NodePath("../HurtboxComponent")
statsComponent = NodePath("../StatsComponent")
metadata/_custom_type_script = "uid://c7f802exmchc0"

[node name="DestroyedComponent" type="Node" parent="." unique_id=1591146093 node_paths=PackedStringArray("actor", "statsComponent")]
script = ExtResource("11_du2gm")
actor = NodePath("..")
statsComponent = NodePath("../StatsComponent")
metadata/_custom_type_script = "uid://betamc0v85hha"
